sourceforge (2.5-26+) unstable; urgency=low

  * [Roland] Fixed the shell box hostname entries (again) in db-upgrade.pl
    (closes: #137183).
  * [Christian] Added dependency on rcs for cvsweb (closes: #137811).
    Yes, we need to have our own cvsweb, since it's a patched version.

 -- Roland Mas <lolando@debian.org>  Tue, 12 Mar 2002 12:17:15 +0100

sourceforge (2.5-26) unstable; urgency=medium

  * [Christian] Made big changes in install-ldap.sh to be ok with
    slapd config.
  * [Roland] Removed unused dir /usr/lib/sourceforge/templates.
  * [Roland] Recalculated $version in db-upgrade.pl.
  * [Roland] Mentioned the .sourceforge-old backup files in the debconf
    question.
  * [Roland] Versioned Depends: on slapd (the admin dn seems to have
    changed).
  * [Roland] Fixed cleaning of LDAP-related files on purge.
  * [Roland] Also fixed cleaning of LDAP directory on remove.
  * [Roland] Updated debian/TODO a bit.  It seems we mostly have "can wait
    until / will be done in / already done in the 2.6 series" entries now,
    which is cool.
  * [Roland] Removed an invalid (and useless) request from
    approve-pending.php.  Should remove a few lines in PostgreSQL error
    logs.
  * [Roland] A few changes here and there to get Sourceforge working with
    the recently uploaded PostgreSQL 7.2, see items tagged [PG7.2] below.
  * [Roland] [PG7.2] Send HUP signal to postmaster in postinst and prerm
    scripts.  This because PostgreSQL now only re-reads the pg_hba.conf
    file upon receiving this signal (and no more on each connection).
  * [Roland] [PG7.2] Fixed insertion of over-long hostnames in the
    database (db-upgrade.pl).
  * [Roland] Also in db-upgrade.pl: fixed the (probably truncated)
    existing unix_box entries.
  * [Roland] Various minor fixes here and there: Debconf templates,
    install-dap.sh, sourceforge-config.sgml, qrs.php.
  * [Christian] change gid determination in install-ftp.sh update 